--- a/code/SentimentAnalysis/Classifier.ipynb
+++ b/code/SentimentAnalysis/Classifier.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -14,6 +14,17 @@
       "[nltk_data] Downloading package stopwords to\n",
       "[nltk_data]     /home/shivansh/nltk_data...\n",
       "[nltk_data]   Package stopwords is already up-to-date!\n"
+     ]
+    },
+    {
+     "ename": "ImportError",
+     "evalue": "cannot import name 'LogisticRegression'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mImportError\u001b[0m                               Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-20-91508197fd78>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     15\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0msklearn\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mmodel_selection\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mtrain_test_split\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     16\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0msklearn\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mpreprocessing\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 17\u001b[0;31m \u001b[0;32mfrom\u001b[0m \u001b[0msklearn\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msvm\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mLinearSVC\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mLogisticRegression\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mImportError\u001b[0m: cannot import name 'LogisticRegression'"
      ]
     }
    ],
@@ -34,7 +45,7 @@
     "from sklearn.metrics import accuracy_score\n",
     "from sklearn.model_selection import train_test_split\n",
     "from sklearn import preprocessing\n",
-    "from sklearn.svm import LinearSVC"
+    "from sklearn.svm import LinearSVC, LogisticRegression"
    ]
   },
   {
@@ -230,7 +241,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -245,8 +256,9 @@
     "    cleaned = []\n",
     "    for i in range(0, len(tweets)):\n",
     "        text = tweets[i]\n",
-    "        text = re.sub('http[s]?://(?:[a-zA-Z]|[0-9]|[$-_@.&+#]|[!*\\(\\),]|(?:%[0-9a-fA-F][0-9a-fA-F]))+','', text)\n",
+    "        text = re.sub('^https?://.*[rn]*','', text)\n",
     "        text = re.sub(\"(@[A-Za-z0-9_]+)\",\"\", text)\n",
+    "        text = re.sub(\"([^\\w\\s])\", \"\", text)\n",
     "        text = tokenizer.tokenize(text)\n",
     "        element = [text, sentiments[i]]\n",
     "        cleaned.append(element)\n",
@@ -310,7 +322,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -322,8 +334,70 @@
     "train_sent = []\n",
     "\n",
     "txt = df.text.tolist()\n",
-    "sent = df.sentiment.tolist()"
+    "sent = df.sentiment.tolist()\n",
+    "\n",
+    "for i in range(0, len(txt)):\n",
+    "    tweets.append([txt[i], sent[i]])\n",
+    "    train_txt.append(txt[i])\n",
+    "    train_sent.append(sent[i])\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "LogisticRegression(max_iter=10000)"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ngram_vectorizer = CountVectorizer(binary=True, ngram_range=(1, 2))\n",
+    "ngram_vectorizer.fit(train_txt)\n",
+    "X = ngram_vectorizer.transform(train_txt)\n",
+    "X_train, X_val, y_train, y_val = train_test_split(\n",
+    "    X, train_sent, train_size = 0.90\n",
+    ")\n",
+    "final_model = LogisticRegression(max_iter=10000)\n",
+    "final_model.fit(X, train_sent)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([4])"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "hrishi = [\"My name is hrishi\"]\n",
+    "# ngram_vectorizer.fit(hrishi)\n",
+    "X_test = ngram_vectorizer.transform(hrishi)\n",
+    "final_model.predict(X_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
