Fixed the model

--- a/code/SentimentAnalysis/Classifier.ipynb
+++ b/code/SentimentAnalysis/Classifier.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 247,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 248,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 181,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -141,15 +141,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
     "df = pd.read_csv('cleaned_data.csv')\n",
     "\n",
     "# Converting the the columns to usable lists in sklearn\n",
-    "text = df.text.tolist()\n",
-    "sentiment = df.sentiment.tolist()\n"
+    "text = df.TEXT.tolist()\n",
+    "sentiment = df.SENTIMENT.tolist()\n"
    ]
   },
   {
@@ -168,17 +168,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Constants used:\n",
+    "import word2vec\n",
     "vec_size = 100"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -187,9 +188,9 @@
      "text": [
       "Running command: word2phrase -train cleaned_data.csv -output cleaned-phrases -min-count 5 -threshold 100 -debug 2\n",
       "Starting training using file cleaned_data.csv\n",
-      "Words processed: 100K     Vocab size: 84K  \n",
-      "Vocab size (unigrams + bigrams): 69859\n",
-      "Words in train file: 165599\n"
+      "Words processed: 600K     Vocab size: 387K  \n",
+      "Vocab size (unigrams + bigrams): 219917\n",
+      "Words in train file: 655354\n"
      ]
     }
    ],
@@ -200,7 +201,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -209,9 +210,9 @@
      "text": [
       "Running command: word2vec -train cleaned-phrases -output cleaned.bin -size 100 -window 5 -sample 1e-3 -hs 0 -negative 5 -threads 12 -iter 5 -min-count 5 -alpha 0.025 -debug 2 -binary 1 -cbow 1\n",
       "Starting training using file cleaned-phrases\n",
-      "Vocab size: 3253\n",
-      "Words in train file: 158945\n",
-      "Alpha: 0.000665  Progress: 99.01%  Words/thread/sec: 273.24k  "
+      "Vocab size: 8275\n",
+      "Words in train file: 663553\n",
+      "Alpha: 0.000185  Progress: 99.56%  Words/thread/sec: 298.34k  "
      ]
     }
    ],
@@ -221,7 +222,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -230,9 +231,9 @@
      "text": [
       "Running command: word2vec -train cleaned_data.csv -output cleaned-clusters.txt -size 100 -window 5 -sample 1e-3 -hs 0 -negative 5 -threads 12 -iter 5 -min-count 5 -alpha 0.025 -debug 2 -binary 0 -cbow 1 -classes 100\n",
       "Starting training using file cleaned_data.csv\n",
-      "Vocab size: 3215\n",
-      "Words in train file: 160032\n",
-      "Alpha: 0.000566  Progress: 98.98%  Words/thread/sec: 280.07k  "
+      "Vocab size: 7971\n",
+      "Words in train file: 671900\n",
+      "Alpha: 0.000237  Progress: 99.53%  Words/thread/sec: 299.19k  "
      ]
     }
    ],
@@ -242,17 +243,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [
-    {
-     "output_type": "stream",
-     "name": "stdout",
-     "text": [
-      "The autoreload extension is already loaded. To reload it, use:\n  %reload_ext autoreload\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "%load_ext autoreload\n",
     "%autoreload 2"
@@ -260,40 +253,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import word2vec"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 157,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
     "w2v_model = word2vec.load('cleaned.bin')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 158,
-   "metadata": {},
-   "outputs": [
-    {
-     "output_type": "execute_result",
-     "data": {
-      "text/plain": [
-       "array(['</s>', ',0', ',4', ..., 'booth', 'gary', 'gmorning'], dtype='<U78')"
-      ]
-     },
-     "metadata": {},
-     "execution_count": 158
-    }
-   ],
-   "source": [
-    "w2v_model.vocab"
    ]
   },
   {
@@ -305,24 +269,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 161,
-   "metadata": {},
-   "outputs": [
-    {
-     "output_type": "stream",
-     "name": "stdout",
-     "text": [
-      "[0, 4]\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(list(set(cleaned_labels)))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 160,
+   "execution_count": 16,
    "metadata": {
     "tags": []
    },
@@ -360,7 +307,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -370,7 +317,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 162,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -379,7 +326,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 163,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -389,7 +336,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 164,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -399,14 +346,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 165,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
-    "X_train = train_features[range(0, vec)]\n",
-    "Y_train = train_features[100]\n",
-    "X_val = test_features[range(0, 100)]\n",
-    "Y_val = test_features[100]"
+    "X_train = train_features[range(0, vec_size)]\n",
+    "Y_train = train_features[vec_size]\n",
+    "X_val = test_features[range(0, vec_size)]\n",
+    "Y_val = test_features[vec_size]"
    ]
   },
   {
@@ -424,8 +371,19 @@
    ],
    "cell_type": "code",
    "metadata": {},
-   "execution_count": 167,
-   "outputs": []
+   "execution_count": 24,
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "LogisticRegression()"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 24
+    }
+   ]
   },
   {
    "source": [
@@ -440,7 +398,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 236,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -467,16 +425,17 @@
     "    clean_sentence = sentence_clean(sentence)\n",
     "    word_vector = [0] * vec_size\n",
     "    num_words = 0\n",
-    "    for word in sentence.split(' '):\n",
+    "    for word in clean_sentence.split(' '):\n",
     "        word.strip(' ')\n",
     "        if len(word) == 0:\n",
     "            continue\n",
-    "        if word not in w2v_model.vocab:\n",
+    "        if word in w2v_model.vocab:\n",
+    "            word_vector = [a + b for a, b in zip(word_vector, w2v_model[word])]\n",
+    "        else:\n",
     "            continue\n",
-    "        word_vector = [a + b for a, b in zip(cur_sentence, w2v_model[word])]\n",
     "        num_words += 1\n",
     "    if num_words == 0:\n",
-    "        return 0\n",
+    "        return 2\n",
     "    \n",
     "    for ind, val in enumerate(word_vector):\n",
     "        word_vector[ind] = val / num_words\n",
@@ -487,19 +446,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 246,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [
     {
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "0.6742574652802659\n"
+      "0.5076293401651547\n"
      ]
     }
    ],
    "source": [
-    "print(depression_scale(\"depressi\"))"
+    "print(depression_scale(\"I am so happy that I want to die\"))"
    ]
   }
  ],
